Fixing vercel errors

--- a/client/package.json
+++ b/client/package.json
@@ -22,12 +22,14 @@
     "canvas-confetti": "^1.9.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "firebase": "^10.9.0",
+    "firebase": "^10.6.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.342.0",
     "moment": "^2.30.1",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.51.1",
@@ -35,7 +37,6 @@
     "react-icons": "^5.0.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.1",
-    "react-sortable-hoc": "^2.0.0",
     "sass": "^1.71.1",
     "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.1",
@@ -47,6 +48,7 @@
     "@types/canvas-confetti": "^1.6.4",
     "@types/node": "^20.11.21",
     "@types/react": "^18.2.56",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.2.19",
     "@types/react-helmet": "^6.1.11",
     "@types/react-icons": "^3.0.0",
